app/app.global.css
/*
 * @NOTE: Prepend a `~` to css file paths that are in your node_modules
 *        See https://github.com/webpack-contrib/sass-loader#imports
 */
@import '~@fortawesome/fontawesome-free/css/all.css';
@import '~normalize.css';
@import '~@blueprintjs/core/lib/css/blueprint.css';
@import '~@blueprintjs/icons/lib/css/blueprint-icons.css';

body {
  position: relative;
  color: hsla(204, 33%, 97%, 1);
  height: 100vh;
  background-color: hsla(206, 24%, 21%, 1);
  background-image: repeating-linear-gradient(
    -45deg,
    black,
    black 1px,
    transparent 1px,
    transparent 6px
  );
  background-size: 4px 4px;
  font-family: sans-serif;
  overflow-y: hidden;
  overflow-x: hidden;
}

h1 {
  margin: 0;
}

.bp3-dark .bp3-editable-text.bp3-editable-text-editing::before {
  background-color: transparent;
}

h2 br {
  display: none;
}

p {
  margin-top: 4px;
  margin-bottom: 8px;
}

p a,
p a:hover {
  color: #92f8e6 !important;
  cursor: text;
}

.ctrl a:hover {
  color: #92f8e6;
  cursor: pointer;
}

.bp3-editable-text {
  width: 100%;
}

.bp3-editable-text-input {
  outline: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100% !important;
}

#root {
  height: 100%;
}

.property {
  font-size: 16px;
  line-height: 20px;
  min-height: 34px;
  font-weight: normal;
  margin: 10px -5px;
  padding: 7px;
  border-bottom: 1px solid hsl(206, 24%, 64%);
  width: calc(100% + 10px);
  min-width: calc(100% + 10px);
  text-align: left;
}

h3 {
  font-size: 1.1em;
  min-height: 2em;
  margin: 3px -5px;
  padding: 4px;
}

.metadata p {
  margin: 0;
}

.ProseMirror {
  background: transparent;
  border-radius: 2px !important;
  border: 1px solid transparent;
  padding: 5px;
  white-space: pre-wrap;
  word-wrap: break-word;
  width: 100%;
}

.ProseMirror + div {
  visibility: hidden;
}

.ProseMirror-focused {
  border: 1px solid #0081c9 !important;
  outline: none;
}

.ProseMirror-focused + div {
  visibility: visible;
}

.ProseMirror + div + div {
  visibility: hidden;
}

.ProseMirror-focused + div + div {
  visibility: visible;
}

.ProseMirror-selectednode {
  -webkit-box-shadow: 0 0 0 1px rgba(19, 124, 189, 1);
  -moz-box-shadow: 0 0 0 1px rgba(19, 124, 189, 1);
  box-shadow: 0 0 0 1px rgba(19, 124, 189, 1);
  z-index: -1;
}

.ProseMirror ul {
  padding: 0;
  margin-left: 20px;
  margin-top: 10px;
}

.ProseMirror ul li {
  color: #92f8e6;
}

.ProseMirror ul li p,
.ProseMirror ol li p {
  color: hsla(204, 33%, 97%, 1);
}

.ProseMirror ol {
  padding: 0;
  padding-left: 15px;
  margin: 0;
  margin-top: 10px;
}

.ProseMirror ol li {
  padding-left: 5px;
  color: #92f8e6;
}

.ProseMirror-gapcursor {
  position: absolute;
}

.selectedCell {
  background: rgba(255, 255, 255, 0.1);
}

.bp3-card {
  padding: 0;
}

.bp3-menu {
  padding: 0;
}

.bp3-icon-drag-handle-vertical {
  padding-top: 2px;
  padding-right: 3px;
}

.regular::after {
  font-weight: 900;
  font-family: 'Font Awesome\ 5 Free', sans-serif;
  display: inline-block;
  content: ' \f35d';
}

.cardLink::after {
  font-weight: 900;
  font-family: 'Font Awesome\ 5 Free', sans-serif;
  display: inline-block;
  content: ' \f105';
}

h6 {
  font-size: 30px;
  text-align: center;
}

blockquote {
  border-left: 1px solid #92f8e6;
  font-style: italic;
  line-height: 1.8em;
  margin: 0;
  padding: 0;
  padding-left: 10px;
  position: relative;
}

blockquote::before {
  content: '';
  position: absolute;
  top: 50%;
  background-color: #30404d;
  height: 2em;
  left: -4px;
  width: 5px;
  margin-top: -1em;
}

blockquote::after {
  content: '\f10e';
  position: absolute;
  top: 50%;
  color: #92f8e6;
  font-family: 'Font Awesome\ 5 Free', sans-serif;
  font-weight: 900;
  font-size: 8px;
  line-height: 1em;
  left: -0.5em;
  text-align: center;
  text-indent: -2px;
  width: 1em;
  margin-top: -0.5em;
}

hr {
  border-width: 0;
  border-bottom: 2px dashed hsl(207, 23%, 37%);
  margin-left: -5px;
  margin-right: -5px;
  margin-top: 0;
  margin-bottom: 0;
}

img {
  max-width: calc(100% + 10px);
  margin: 5px -5px;
  display: block;
  position: relative;
  min-height: 18px;
  margin-bottom: -22px;
}

img::before {
  content: '\f127';
  position: absolute;
  margin-left: 10px;
  margin-top: 3px;
  top: 0;
  left: 0;
  display: block;
  font-size: 10px;
  font-style: normal;
  font-family: 'Font Awesome\ 5 Free', sans-serif;
  font-weight: 900;
  width: 100%;
  z-index: 1;
}

img::after {
  content: attr(alt);
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  background: #db3737;
  padding: 0;
  padding-left: 30px;
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
}

td img {
  max-width: calc(100% + 3px);
  margin: -3px -4px;
  margin-bottom: -26px;
}

.metadata td img {
  max-width: calc(100% + 9px);
  margin: -3px -4px;
  margin-bottom: -22px;
}

@keyframes up-right {
  0% {
    transform: scale(1);
    opacity: 0.25;
  }
  50% {
    transform: scale (1, 5);
    opacity: 1;
  }
  100% {
    transform: scale(1);
    opacity: 0.25;
  }
}

.subnote-active {
  background-color: #ffb366;
  opacity: 0.25;
  -webkit-animation: up-right 1s infinite;
  -moz-animation: up-right 1s infinite;
  -o-animation: up-right 1s infinite;
  animation: up-right 1s infinite;
}

.bp3-icon-fullscreen,
.bp3-icon-chevron-left {
  color: hsla(204, 33%, 97%, 1) !important;
}

.metadata {
  border-collapse: separate !important;
  border-spacing: 0 5px;
  width: calc(100% + 9px) !important;
  margin: -6px !important;
  margin-left: -4px !important;
}

.metadata thead {
  display: none;
}

.metadata td {
  padding: 5px 5px;
}

.metadata td:nth-child(1) {
  background-color: #394b59;
  background-image: linear-gradient(
    180deg,
    hsla(0, 0%, 100%, 0.05),
    hsla(0, 0%, 100%, 0)
  );
  box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.4);
  border-radius: 3px 0 0 3px;
  color: #f5f8fa;
  text-align: left;
  min-width: 30px;
  width: 30px;
  max-width: 120px;
}

.metadata tr:not(:first-child) {
  border-top: none;
}

.metadata td:nth-child(2) {
  background-color: rgba(16, 22, 26, 0.3);
  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0),
    0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
    inset 0 1px 1px rgba(16, 22, 26, 0.4);
  word-break: break-all;
  text-align: right;
  border-left: none;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.4);
  border-radius: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.55);
}

*:focus {
  outline: 0 !important;
}

.bp3-editable-text-input::-webkit-input-placeholder {
  color: hsla(204, 33%, 97%, 1);
}

